# okx-algotrade-agent-x

./: .gitignore  README.md  env.txt  pyproject.toml  rename_env.env  requirements.txt
.github/: FUNDING.yml
agent_x/: _init_.py  agent.py  api_client.py  backtest.py  cli.py  config.py  data.py  indicators.py  model.py  optimize.py  risk.py  strategy.py  trade_logger.py  trader.py  utils.py
scripts/: plot_backtest.py
state/: active_config.json  best_params.json  equity_curve.csv  trade_history.csv
tests/: test_agent.py  test_autobot.py  test_backtest.py  test_indicators.py  test_live_loop.py  test_optimize.py  test_risk.py  test_strategy.py  test_trader.py  test_trailing_stop_params.py
